# vct-erdos-project

./: pyproject.toml  vct_rounds_pred.ipynb
notebooks/: vct_2021_data_cleaning.ipynb  vct_2022_data_cleaning.ipynb  vct_2022_eco_player_prob_rating.ipynb  vct_2022_eco_player_rating.ipynb  vct_2022_lr_team_comp.ipynb  vct_2022_player_rating.ipynb  vct_2022_team_comp_analysis.ipynb  vct_2022_team_comp_exploration.ipynb  vct_2022_team_comp_exploration2.ipynb  vct_2023_data.ipynb  vct_2023_data_cleaning.ipynb  vct_2023_eco_player_rating.ipynb  vct_2023_eco_rating_using_prob.ipynb  vct_2023_eco_rounds_exploration.ipynb  vct_2023_kills_vs_scores.ipynb  vct_2023_model_training.ipynb  vct_2023_player_rating.ipynb  vct_2023_role_rating.ipynb  vct_2023_special_kills_rating.ipynb  vct_2023_team_rating.ipynb
notebooks/Economy/: Explore.ipynb  LogReg.ipynb  Rating.ipynb  TeamRating.ipynb  TeamRatingAll.ipynb  TeamRatingAllHalfValues.ipynb  TeamRatingFracture.ipynb  TeamRatingHaven.ipynb  vct_2022_eco_rounds_exploration.ipynb
