[tool.poetry]
name = "vct-erdos-project"
version = "0.1.0"
description = ""
authors = ["Ahram Lim <ahramlim4444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
kaggle = "^1.6.6"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
