[tool.poetry]
name = "vct-erdos-project"
version = "0.1.0"
description = ""
authors = ["Ahram Lim <ahramlim4444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.4"
kaggle = "^1.6.6"
ipykernel = "^6.29.3"
matplotlib = "^3.7.5"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
scipy = "<=1.11.4"
kaleido = "0.2.1"
pycaret = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
